[#97] feature : The 'category' field provided for the posts.
Material: https://nimb.ws/7KGwV6
